# Routex_AI_Web_Project

./: .replit  Hóa10.docx  Hóa11.docx  Lý11.docx  Lý12.docx  README.md  Sinh10.docx  Sinh11.docx  Sinh12.docx  Toán10.docx  Toán11.docx  Toán12.docx  Vật lý.docx  api.tx  netlify.toml  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  vercel.json
.local/secondary_skills/ad-creative/: .fingerprint
.local/secondary_skills/ai-recruiter/: .fingerprint
.local/secondary_skills/ai-sdr/: .fingerprint
.local/secondary_skills/ai-secretary/: .fingerprint
.local/secondary_skills/branding-generator/: .fingerprint
.local/secondary_skills/competitive-analysis/: .fingerprint
.local/secondary_skills/content-machine/: .fingerprint
.local/secondary_skills/deep-research/: .fingerprint
.local/secondary_skills/design-thinker/: .fingerprint
.local/secondary_skills/excel-generator/: .fingerprint
ai_engine/: requirements.txt  routex_features.pkl  routex_xgboost_v1.pkl
ai_engine/data/: generate_graph.py  routex_vfinal_training_data.csv
attached_assets/: Pasted-Installing-collected-packages-passlib-websockets-urllib_1775804729789.txt  Pasted-ho-n-th-nh-to-n-b-app-v-i-frontend-p-v-backend-th-to-n-_1775188676915.txt
backend/: .env  generate_mcq.py  generate_mcq_bulk.py  generate_mcq_local.py  migrate_add_last_reviewed.py  requirements.txt  routex.db  run_scraper.py  seed_all_subjects.py  seed_hoa12.py  seed_questions.py
backend/app/: main.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
(+188 files in other folders)
